## 20241121
### VSCode .workspace initial checkin (1620)

