@@ -1,4 +1,9 @@
 ## 20241121
 ### VSCode .workspace initial checkin (1620)
+* VSCode extension pack
+* Path intellisense
+* Better Comments
+* Ruff
 
+## Format on save
 
